Robofriends 2nd drop

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   flex-wrap: wrap;
+  background-image: linear-gradient(to right, #a8ff78, #78ffd6);
+  font-family: "Roboto", sans-serif;
+  font-family: "Sniglet", cursive;
 }
 
 code {
