--- a/src/CardList.css
+++ b/src/CardList.css
@@ -1,7 +1,8 @@
 .bby {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top: 5%;
 }
